feat(tokens): Primitive tokens (#3792)
* feat(tokens): Generate Primitive tokens

* feat(tokens): Add tests for primitive tokens

* feat(tests): Add test to check access metadata

* Point tokens folder to npm package

* Remove string-hash package

* Move theme tokens into correct category

* Fix test

* Remove unused token package in theme file

* Add missing tokens

* Bump primitive token package

--- a/packages/design-system/design-tokens/extensions/ui-force/base.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/base.yml
@@ -8,6 +8,7 @@ imports:
 - ./border-width.yml
 - ./box-shadow.yml
 - ./duration.yml
+- ./illustrations.yml
 - ./image-paths.yml
 - ./sizing.yml
 - ./text-color.yml
