--- a/packages/design-system/design-tokens/extensions/ui-force/deprecated/base.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/deprecated/base.yml
@@ -6,6 +6,7 @@ imports:
 - ./border-color.yml
 - ./box-shadow.yml
 - ./font-size.yml
+- ./font-family.yml
 - ./sizing.yml
 - ./spacing.yml
 - ./text-color.yml
