--- a/packages/design-system/design-tokens/primitive/sizing.yml
+++ b/packages/design-system/design-tokens/primitive/sizing.yml
@@ -17,6 +17,8 @@ global:
   - 'margin*'
   - 'padding*'
   - transform
+  scope: global
+  primitive: true
 imports:
 - ../aliases/sizing.yml
 props:
