--- a/packages/design-system/design-tokens/primitive/z-index.yml
+++ b/packages/design-system/design-tokens/primitive/z-index.yml
@@ -6,6 +6,8 @@ global:
   category: z-index
   cssProperties:
   - z-index
+  scope: global
+  primitive: true
 props:
   Z_INDEX_TOAST:
     value: '10000'
