--- a/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
@@ -24,15 +24,29 @@ props:
   HEIGHT_HEADER:
     value: 2.75rem
     comment: Brand header. Phone 44px; Tablet 50px
+    access: global
+  HEIGHT_FOOTER:
+    value: 3.75rem
+    comment: Action footer menu. Phone 44px; Tablet 50px
+    access: global
   HEIGHT_INPUT:
     value: 1.875rem
     comment: Text input height
+  WIDTH_STAGE_LEFT_COLLAPSED:
+    value: 4rem
+    comment: Stage left for desktop when closed (showing icons only).
+    access: global
+  WIDTH_STAGE_LEFT_EXPANDED:
+    value: 15rem
+    comment: Stage left for desktop when open.
+    access: global
   MAX_WIDTH_ACTION_OVERFLOW_MENU:
     value: 512px
     comment: "Maximum width for action overflow menu so that it's not full-screen for tablet."
   SQUARE_TAPPABLE:
     value: 2.75rem
     comment: Tap target size for elements that rely on width and height dimensions
+    access: global
   SQUARE_TAPPABLE_SMALL:
     value: 2rem
     comment: Small tap target size for elements that rely on width and height dimensions
