--- a/packages/design-system/design-tokens/extensions/ui-force/text-color.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/text-color.yml
@@ -14,6 +14,7 @@ props:
   COLOR_TEXT_INPUT_DISABLED:
     value: '{!PALETTE_COOL_GRAY_9}'
     comment: Input disabled text
+    access: global
   COLOR_TEXT_INPUT_FOCUS_INVERSE:
     value: '{!BISCAY}'
     comment: Typed input text
