--- a/packages/design-system/design-tokens/primitive/font-family.yml
+++ b/packages/design-system/design-tokens/primitive/font-family.yml
@@ -7,10 +7,16 @@ global:
   cssProperties:
   - 'font'
   - 'font-family'
-  deprecated: true
+  scope: global
+  primitive: true
 imports:
-- ../../aliases/font-family.yml
+- ../aliases/font-family.yml
 props:
-  FONT_FAMILY_TEXT:
+  FONT_FAMILY:
     value: '{!SANS_SERIF}'
-    comment: 'Deprecated: use FONT_FAMILY instead for regular body text and FONT_FAMILY_HEADING for headings.'
+    comment: 'Default font-family for Salesforce applications'
+    access: global
+  FONT_FAMILY_HEADING:
+    value: '{!SANS_SERIF}'
+  FONT_FAMILY_MONOSPACE:
+    value: '{!MONOSPACE}'
