--- a/packages/design-system/design-tokens/primitive/line-height.yml
+++ b/packages/design-system/design-tokens/primitive/line-height.yml
@@ -7,6 +7,8 @@ global:
   cssProperties:
   - font
   - '*height'
+  scope: global
+  primitive: true
 props:
   LINE_HEIGHT_HEADING:
     value: '1.25'
