--- a/packages/design-system/design-tokens/primitive/text-color.yml
+++ b/packages/design-system/design-tokens/primitive/text-color.yml
@@ -7,6 +7,8 @@ global:
   cssProperties:
   - color
   - fill
+  scope: global
+  primitive: true
 imports:
 - ../aliases/colors.yml
 - ../aliases/color-palettes.yml
