fix(menu): Correct RTL flipping (#3881)
* fix(menu): Correct RTL flipping

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(nubbins): Add @noflip annotation to avoid misplaced nubbin

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(tree): Correct shadow/bar highlight of tree-item in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(vertical-nav): Correct shadow/bar highlight in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(accordion): Correct direction of action icon in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(vertical-nav): Correct direction of overflow icon in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(tree): Correct direction of tree-item expand/collapse icon in RTL

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* chore(infra): Add Storybook RTL addon

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* fix(rtl): Update release notes

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* Update package-lock.json

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -164,6 +164,7 @@
     "scss-parser": "1.0.0",
     "semver": "5.5.1",
     "simple-git": "1.107.0",
+    "storybook-addon-rtl": "0.2.2",
     "strip-indent": "2.0.0",
     "style-loader": "0.19.0",
     "styled-components": "4.2.0",
