fix(progress-indicator): Touch updates (#3896)
* fix(progress-indicator): add Storybook stories

* fix(progress-indicator): remove duplicate CSS classes from examples

* fix(progress-indicator): add touch token

* fix(progress-indicator): update font size of vertical variant

* fix(progress-indicator): add invisible tap target height to buttons

* fix(progress-indicator): update tests after removing duplicate classes from examples

* Set transform to storyFrame so contain modals

--- a/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
@@ -53,6 +53,9 @@ props:
   SQUARE_TAPPABLE_X_SMALL:
     value: 1.5rem
     comment: X-small tap target size for elements that rely on width and height dimensions
+  SQUARE_TAPPABLE_XX_SMALL:
+    value: 1.25rem
+    comment: Xx-small tap target size for elements that rely on width and height dimensions
   HEIGHT_TAPPABLE:
     value: 2.75rem
     comment: Tap target size for elements that rely on height or line-height
