Upgrade to Babel 7, Storybook, Jest (#3968)
* Upgrade to Babel 7, Storybook, Jest

* Lint

* Update travis script

* Update snapshots

* Update snapshots

* Update snapshots

* Fix prop assignment in StoryFrame

* Update snapshots

* Update snapshots

* fix storyframe merge conflict

--- a/packages/design-system/.babelrc
+++ b/packages/design-system/.babelrc
@@ -1,13 +1,33 @@
+
 {
-  "presets": ["react"],
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
   "plugins": [
-    "transform-es2015-modules-commonjs",
-    "transform-object-rest-spread",
-    "syntax-dynamic-import"
+    "@babel/plugin-transform-modules-commonjs",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-syntax-dynamic-import",
+    ["@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
   ],
   "env": {
     "test": {
-      "plugins": ["transform-es2015-modules-commonjs"]
+      "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react"
+      ],
+      "plugins": [
+        "@babel/plugin-transform-modules-commonjs",
+        ["@babel/plugin-transform-runtime",
+          {
+            "regenerator": true
+          }
+        ]
+      ]
     }
   },
   "ignore": ["node_modules"]
