--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -23,7 +23,16 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "7.4.4",
+    "@babel/cli": "7.5.0",
+    "@babel/core": "7.5.4",
+    "@babel/node": "7.5.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.5.4",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "7.5.0",
+    "@babel/plugin-transform-runtime": "7.5.0",
+    "@babel/preset-env": "7.5.4",
+    "@babel/preset-react": "7.0.0",
+    "@babel/runtime": "7.5.4",
     "@epegzz/sass-vars-loader": "4.3.1",
     "@mdx-js/loader": "1.0.18",
     "@mdx-js/mdx": "1.0.18",
@@ -37,28 +46,23 @@
     "@salesforce-ux/instant-vrt": "2.0.0",
     "@salesforce-ux/scss-parser-aura": "3.0.4",
     "@std/esm": "0.23.2",
-    "@storybook/addon-a11y": "5.0.11",
-    "@storybook/addon-backgrounds": "5.0.11",
-    "@storybook/addon-options": "5.0.11",
-    "@storybook/addon-viewport": "5.0.11",
-    "@storybook/addons": "5.0.11",
-    "@storybook/react": "5.0.11",
-    "@storybook/theming": "5.0.11",
+    "@storybook/addon-a11y": "5.1.9",
+    "@storybook/addon-backgrounds": "5.1.9",
+    "@storybook/addon-options": "5.1.9",
+    "@storybook/addon-viewport": "5.1.9",
+    "@storybook/addons": "5.1.9",
+    "@storybook/react": "5.1.9",
+    "@storybook/theming": "5.1.9",
     "ajv": "6.10.0",
     "async": "2.3.0",
     "autoprefixer": "6.7.7",
     "axe-core": "3.0.3",
     "axe-webdriverjs": "2.0.1",
-    "babel-cli": "6.23.0",
-    "babel-core": "6.24.0",
-    "babel-eslint": "9.0.0",
-    "babel-jest": "22.4.1",
-    "babel-loader": "7.1.3",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.23.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.2",
+    "babel-jest": "24.8.0",
+    "babel-loader": "8.0.6",
+    "babel-polyfill": "6.26.0",
     "body-parser": "1.18.2",
     "chalk": "2.4.1",
     "classnames": "2.2.5",
@@ -70,8 +74,8 @@
     "cssstats": "3.0.0",
     "data.either": "1.5.0",
     "del": "2.2.2",
-    "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.12.1",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
     "eslint": "5.6.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-config-standard": "12.0.0",
@@ -118,7 +122,7 @@
     "immutable": "3.8.1",
     "invariant": "2.2.4",
     "isomorphic-fetch": "2.2.1",
-    "jest": "22.4.2",
+    "jest": "24.8.0",
     "js-beautify": "1.6.12",
     "js-yaml": "3.8.3",
     "lint-staged": "4.0.4",
@@ -155,8 +159,9 @@
     "raw-loader": "0.5.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-lazyload": "2.6.1",
-    "react-test-renderer": "16.4.1",
+    "react-lazyload": "2.6.2",
+    "react-test-renderer": "16.8.6",
+    "regenerator-runtime": "0.13.2",
     "resolve-url-loader": "3.1.0",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
@@ -227,9 +232,11 @@
   "jest": {
     "testURL": "http://localhost/",
     "testRegex": "(/__tests__/.*(test|spec))\\.jsx?$",
-    "globalSetup": "./jest.setup.global.js",
-    "globalTeardown": "./jest.teardown.global.js",
-    "setupTestFrameworkScriptFile": "./jest.setup.js",
+    "globalSetup": "<rootDir>/jest.setup.global.js",
+    "globalTeardown": "<rootDir>/jest.teardown.global.js",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
     "moduleNameMapper": {
       "\\.(scss)$": "<rootDir>/shared/vendor/prism/"
     },
