chore(tokens): Bump primitive tokens to 0.0.3 (#4001)
* chore(tokens): Bump primitive toekns to 0.0.3

* Update test

--- a/packages/design-system/design-tokens/extensions/ui-force/base.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/base.yml
@@ -10,5 +10,7 @@ imports:
 - ./duration.yml
 - ./illustrations.yml
 - ./image-paths.yml
+- ./line-height.yml
+- ./radius.yml
 - ./sizing.yml
 - ./text-color.yml
