feat(sanitize): Create sanitization script, parse and optimize v2 (#4031)
* Create sanitization script, parse and optimize v2

* Add @lwc annotations

* Replace gulp-minify-css with gulp-clean-css

* Remove stylestats and replace with working script

* Release notes

* Make sure sanitization runs on build

* Move exports

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -95,6 +95,7 @@
     "gulp-autoprefixer": "3.1.1",
     "gulp-axe-webdriver": "3.0.1",
     "gulp-cached": "1.1.1",
+    "gulp-clean-css": "4.2.0",
     "gulp-cli": "2.0.1",
     "gulp-concat": "2.6.1",
     "gulp-debug": "3.1.0",
@@ -106,7 +107,6 @@
     "gulp-ignore": "2.0.2",
     "gulp-insert": "0.5.0",
     "gulp-lintspaces": "0.5.0",
-    "gulp-minify-css": "1.2.4",
     "gulp-plumber": "1.1.0",
     "gulp-postcss": "6.4.0",
     "gulp-rename": "1.2.2",
@@ -175,7 +175,6 @@
     "styled-components": "4.2.0",
     "stylelint": "7.10.1",
     "stylelint-config-slds": "1.0.7",
-    "stylestats": "7.0.1",
     "theo": "7.0.1",
     "thread-loader": "1.1.5",
     "through2": "2.0.3",
