chore(lwc): Add package to lwc scope for legacy import support (#4053)

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -251,5 +251,13 @@
   "@std/esm": {
     "cjs": true,
     "esm": "js"
+  },
+  "lwc": {
+    "modules": [
+      {
+        "name": "@salesforce/slds/legacy",
+        "path": "assets/styles/salesforce-lightning-design-system-sanitized.css"
+      }
+    ]
   }
 }
