feat(line-clamp-util): add line clamp util (#4060)
* feat(line-clamp-util): add line clamp util

* feat(line-clamp-util): docs revision

* feat(line-clamp-util): explicitly declare white-space to help with proper wrapping of text

* feat(line-clamp-util): disable stylelint for necessary vendor prefixing

* feat(line-clamp): Add default class that is powered by a token

* feat(line-clamp): Remove extra ;

--- a/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
@@ -43,3 +43,6 @@ props:
   MAX_WIDTH_ACTION_OVERFLOW_MENU:
     value: 512px
     comment: "Maximum width for action overflow menu so that it's not full-screen for tablet."
+  LINE_CLAMP:
+    value: 3
+    comment: "Default amount of line breaks before text is truncated"
