--- a/packages/design-system/design-tokens/extensions/ui-force/primitive/border-color.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/primitive/border-color.yml
@@ -7,11 +7,12 @@ global:
   cssProperties:
   - 'border*'
   - box-shadow
+  primitive: true
 imports:
 - ../../../aliases/color-palettes.yml
 props:
   COLOR_BORDER:
-    value: '{!PALETTE_GRAY_5}'
+    value: '{!PALETTE_COOL_GRAY_5}'
     cssProperties:
     - 'border*'
     - box-shadow
@@ -19,26 +20,26 @@ props:
     comment: Default border color for UI elements.
     access: global
   COLOR_BORDER_SEPARATOR:
-    value: '{!PALETTE_GRAY_3}'
+    value: '{!PALETTE_COOL_GRAY_2}'
     comment: Lightest separator color - used as default separator on white backgrounds.
     access: global
   COLOR_BORDER_SEPARATOR_ALT:
-    value: '{!PALETTE_GRAY_5}'
+    value: '{!PALETTE_COOL_GRAY_5}'
     comment: Medium separator color - used as default separator on light gray backgrounds.
     access: global
   COLOR_BORDER_SEPARATOR_ALT_2:
-    value: '{!PALETTE_GRAY_6}'
+    value: '{!PALETTE_COOL_GRAY_6}'
     comment: Darkest separator color - used as an alternate separator color when more differentiation is desired.
     access: global
   ## FEEDBACK
   COLOR_BORDER_INFO:
-    value: '{!PALETTE_GRAY_9}'
+    value: '{!PALETTE_COOL_GRAY_9}'
     comment: 'Border color for UI elements related to providing neutral information (not error, success, or warning).'
   COLOR_BORDER_OFFLINE:
-    value: '{!PALETTE_GRAY_11}'
+    value: '{!PALETTE_COOL_GRAY_11}'
     comment: Border color for UI elements related to the offline state.
   ## SELECTION
   COLOR_BORDER_SELECTION_ACTIVE:
-    value: '{!PALETTE_GRAY_3}'
+    value: '{!PALETTE_COOL_GRAY_2}'
     specificity: builders
     comment: Used to delineate the boundary of a component that is being clicked. Specific to builders.
