--- a/packages/design-system/design-tokens/extensions/ui-force/primitive/palette-colors.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/primitive/palette-colors.yml
@@ -10,24 +10,25 @@ global:
   - box-shadow
   - fill
   - color
+  primitive: true
 props:
   BRAND_BACKGROUND_PRIMARY:
-    value: "#b0c4df"
+    value: "#fafaf9"
     comment: "Primary page background color"
     themeable: true
     release: 2.6.0
   BRAND_BACKGROUND_PRIMARY_TRANSPARENT:
-    value: "rgba(176,196,223,0)"
+    value: "rgba(250,250,249,0)"
     comment: "These RGBA values need to be updated if BRAND_BACKGROUND_PRIMARY changes, solves webkit bug"
     themeable: true
     release: 2.6.0
   BRAND_BACKGROUND_DARK:
-    value: "#195594"
+    value: "#e8e8e8"
     comment: "Dark variant of BRAND_BACKGROUND_PRIMARY, used within gradient of background color"
     themeable: true
     release: 2.6.0
   BRAND_BACKGROUND_DARK_TRANSPARENT:
-    value: "rgba(25,85,148,0)"
+    value: "rgba(221,219,218,0)"
     comment: "These RGBA values need to be updated if BRAND_BACKGROUND_DARK changes, solves webkit bug"
     themeable: true
     release: 2.6.0
