--- a/packages/design-system/design-tokens/theme-one-salesforce.yml
+++ b/packages/design-system/design-tokens/theme-one-salesforce.yml
@@ -2,4 +2,5 @@
 # Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 imports:
+- ./primitive/base.yml
 - ./themes/oneSalesforce/base.yml
