fix(token): Add missing property (#4080)

--- a/packages/design-system/design-tokens/extensions/ui-force/primitive/border-color.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/primitive/border-color.yml
@@ -7,6 +7,8 @@ global:
   cssProperties:
   - 'border*'
   - box-shadow
+  - outline
+  - outline-color
   primitive: true
 imports:
 - ../../../aliases/color-palettes.yml
