fix(tokens): correct js_button icon bg token (#4087)

--- a/packages/design-system/design-tokens/bg-standard.yml
+++ b/packages/design-system/design-tokens/bg-standard.yml
@@ -577,7 +577,7 @@ props:
     value: '#3c97dd'
   VISUALFORCE_PAGE:
     value: '#fcb95b'
-  JAVASCRIPT_BUTTONS:
+  JAVASCRIPT_BUTTON:
     value: '#fcb95b'
   SALES_CADENCE_TARGET:
     value: '#54698d'
