chore(tokens): Bump tokens package for brand GA (#4093)
* Bump primitive tokens to 0.0.7

* Release notes

* Add new ga tokens to test check

* Update metadata in ui-force

--- a/packages/design-system/design-tokens/extensions/ui-force/primitive/palette-colors.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/primitive/palette-colors.yml
@@ -17,6 +17,7 @@ props:
     comment: "Primary page background color"
     themeable: true
     release: 2.6.0
+    access: global
   BRAND_BACKGROUND_PRIMARY_TRANSPARENT:
     value: "rgba(250,250,249,0)"
     comment: "These RGBA values need to be updated if BRAND_BACKGROUND_PRIMARY changes, solves webkit bug"
@@ -27,6 +28,7 @@ props:
     comment: "Dark variant of BRAND_BACKGROUND_PRIMARY, used within gradient of background color"
     themeable: true
     release: 2.6.0
+    access: global
   BRAND_BACKGROUND_DARK_TRANSPARENT:
     value: "rgba(221,219,218,0)"
     comment: "These RGBA values need to be updated if BRAND_BACKGROUND_DARK changes, solves webkit bug"
