--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -33,9 +33,9 @@
     "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
     "@babel/runtime": "7.5.4",
-    "@epegzz/sass-vars-loader": "4.3.1",
-    "@mdx-js/loader": "1.4.5",
-    "@mdx-js/mdx": "1.0.18",
+    "@epegzz/sass-vars-loader": "6.0.0",
+    "@mdx-js/loader": "1.5.5",
+    "@mdx-js/mdx": "1.5.5",
     "@salesforce-ux/build-server-api": "2.1.7",
     "@salesforce-ux/create-snap": "0.0.7",
     "@salesforce-ux/design-system-markup": "2.0.2",
@@ -46,17 +46,17 @@
     "@salesforce-ux/instant-vrt": "2.0.0",
     "@salesforce-ux/scss-parser-aura": "3.0.5",
     "@std/esm": "0.23.2",
-    "@storybook/addon-a11y": "5.2.1",
-    "@storybook/addon-backgrounds": "5.2.1",
-    "@storybook/addon-docs": "5.2.1",
-    "@storybook/addon-options": "5.2.1",
-    "@storybook/addon-viewport": "5.2.1",
-    "@storybook/addons": "5.2.1",
-    "@storybook/react": "5.2.1",
-    "@storybook/theming": "5.2.1",
+    "@storybook/addon-a11y": "5.3.8",
+    "@storybook/addon-backgrounds": "5.3.8",
+    "@storybook/addon-docs": "5.3.8",
+    "@storybook/addon-options": "5.3.8",
+    "@storybook/addon-viewport": "5.3.8",
+    "@storybook/addons": "5.3.8",
+    "@storybook/react": "5.3.8",
+    "@storybook/theming": "5.3.8",
     "ajv": "6.10.0",
     "async": "2.3.0",
-    "autoprefixer": "9.6.5",
+    "autoprefixer": "9.7.4",
     "axe-core": "3.0.3",
     "axe-webdriverjs": "2.0.1",
     "babel-core": "7.0.0-bridge.0",
@@ -71,7 +71,7 @@
     "conventional-changelog": "1.1.4",
     "copy-webpack-plugin": "5.1.1",
     "core-js": "2.6.5",
-    "css-loader": "2.1.1",
+    "css-loader": "3.4.2",
     "cssstats": "3.0.0",
     "data.either": "1.5.0",
     "del": "2.2.2",
@@ -89,6 +89,8 @@
     "eslint-plugin-standard": "4.0.0",
     "event-stream": "3.3.4",
     "express": "4.17.1",
+    "extract-loader": "4.0.3",
+    "file-loader": "5.0.2",
     "fs-extra": "2.1.2",
     "futurize": "1.2.0",
     "glob": "7.1.1",
@@ -143,6 +145,7 @@
     "magic-string": "0.25.0",
     "markdown-it": "8.3.1",
     "mdxc": "1.0.0",
+    "mini-css-extract-plugin": "0.9.0",
     "ms": "2.1.1",
     "nconf": "0.10.0",
     "no-case": "2.3.2",
@@ -159,35 +162,36 @@
     "prop-types": "15.6.0",
     "puppeteer": "2.0.0",
     "query-ast": "1.0.2",
-    "raw-loader": "0.5.1",
+    "raw-loader": "4.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-frame-component": "4.1.1",
     "react-lazyload": "2.6.2",
     "react-test-renderer": "16.9.0",
     "regenerator-runtime": "0.13.2",
     "rehype-add-classes": "1.0.0",
-    "resolve-url-loader": "3.1.0",
+    "resolve-url-loader": "3.1.1",
     "rimraf": "2.6.1",
     "sass": "1.23.7",
-    "sass-loader": "8.0.0",
+    "sass-loader": "8.0.2",
     "scss-inline-imports": "1.0.6",
     "scss-parser": "1.0.3",
     "semver": "5.5.1",
     "simple-git": "1.107.0",
     "storybook-addon-rtl": "0.2.2",
     "strip-indent": "2.0.0",
-    "style-loader": "0.19.0",
+    "style-loader": "1.1.3",
     "styled-components": "4.2.0",
     "stylelint": "7.10.1",
     "stylelint-config-slds": "1.0.7",
     "theo": "8.1.4",
-    "thread-loader": "1.1.5",
+    "thread-loader": "2.1.3",
     "through2": "2.0.3",
     "touch": "3.1.0",
     "vinyl": "2.1.0",
     "vnu-jar": "17.11.1",
-    "webpack": "4.31.0",
-    "webpack-cli": "2.0.9",
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10",
     "yargs": "8.0.1"
   },
   "optionalDependencies": {
