chore(update-lwc-module-resultion): add property for lwc package config (#4274)

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -263,6 +263,9 @@
         "name": "@salesforce/slds/legacy",
         "path": "assets/styles/salesforce-lightning-design-system-imports.sanitized.css"
       }
+    ],
+    "expose": [
+      "@salesforce/slds/legacy"
     ]
   }
 }
